tests/fail/grid_in_02/2d.inp
16 10 0 0 0
1  0.7071 -0.7071 0
2  0.2668 -0.2668 0
3  0.2668 0.2668 0
4  0.7071 0.7071 0
5  0 -1 0
6  0.5 -0.5 0
7  0 -0.3139 0
8  0 -0.6621 0
9  0.3139 0 0
10  0 0.3139 0
11  0 0 0
12  1 0 0
13  0.5 0.5 0
14  0.6621 0 0
15  0 1 0
16  0 0.6621 0
1  0 quad    5 1  6  8 
2  0 quad     8  6 2  7 
3  0 quad     7 2  9 11 
4  0 quad    11  9 3 10 
5  0 quad    1 12 14  6 
6  0 quad    12 4 13 14 
7  0 quad    14 13 3  9 
8  0 quad     6 14  9 2 
9  0 quad    16 10  3 13 
10 0 quad    15 16 13 4 
